animaciones en las fotos

--- a/alojamiento.html
+++ b/alojamiento.html
@@ -52,13 +52,13 @@
                         caliente.</p>
                 </div>
                 <div class="imggrande container">
-                    <img src="Imagenes/Cabañanorte1.jpg" alt="Foto de la cabaña norte">
+                    <img src="Imagenes/Cabañanorte1.jpg" class="escala" alt="Foto de la cabaña norte">
                 </div>
                 <div class="imgchica1 container">
-                    <img src="Imagenes/cabañanorte2.jpg" alt="Foto del baño de la cabaña norte">
+                    <img src="Imagenes/cabañanorte2.jpg" class="escala" alt="Foto del baño de la cabaña norte">
                 </div>
                 <div class="imgchica2 container">
-                    <img src="Imagenes/cabañanorte3.jpg" alt="Foto de lapieza de la cabaña norte">
+                    <img src="Imagenes/cabañanorte3.jpg" class="escala" alt="Foto de lapieza de la cabaña norte">
                 </div>
             </section>
             <section class="cabanasur">
@@ -73,13 +73,13 @@
                     </p>
                 </div>
                 <div class="imggrande container">
-                    <img src="Imagenes/cabañasur1.jpg" alt="Foto de la cabaña sur">
+                    <img src="Imagenes/cabañasur1.jpg" class="escala" alt="Foto de la cabaña sur">
                 </div>
                 <div class="imgchica1 container">
-                    <img src="Imagenes/cabañasur2.jpg" alt="Foto del living de la cabaña  sur">
+                    <img src="Imagenes/cabañasur2.jpg" class="escala" alt="Foto del living de la cabaña  sur">
                 </div>
                 <div class="imgchica2 container">
-                    <img src="Imagenes/cabañasur3.jpg" alt="Foto de afuera de la cabaña sur">
+                    <img src="Imagenes/cabañasur3.jpg" class="escala" alt="Foto de afuera de la cabaña sur">
                 </div>
             </section>
             <section class="glampings">
@@ -93,13 +93,13 @@
                     </p>
                 </div>
                 <div class="imggrande container">
-                    <img src="Imagenes/Glamping1.jpg" alt="Foto del glamping 1">
+                    <img src="Imagenes/Glamping1.jpg" class="escala" alt="Foto del glamping 1">
                 </div>
                 <div class="imgchica1 container">
-                    <img src="Imagenes/Glamping2.jpg" alt="Foto del glamping 2">
+                    <img src="Imagenes/Glamping2.jpg" class="escala" alt="Foto del glamping 2">
                 </div>
                 <div class="imgchica2 container">
-                    <img src="Imagenes/Glamping3.jpg" alt="foto del glamping 3">
+                    <img src="Imagenes/Glamping3.jpg" class="escala" alt="foto del glamping 3">
                 </div>
             </section>
             <section class="intro container">
