--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="row">
           <div class="col-12 col-xl-6">
             <div class="card">
-              <img src="Imagenes/Alojamiento index.jpeg" class="card-img-top" alt="Foto del alojamiento">
+              <img src="Imagenes/Alojamiento index.jpeg" class="escala card-img-top" alt="Foto del alojamiento">
               <div class="card-body">
                 <h3 class="card-title">Cabañas? Glampings?</h3>
                 <p class="card-text">Conocé todas las opciones disponibles y elegí la que mejor
@@ -69,7 +69,7 @@
           </div>
           <div class="col-12 col-xl-6">
             <div class="card">
-              <img src="Imagenes/snowboard.jpeg" class="card-img-top" alt="Foto de activiad en motos de nieve y UTV">
+              <img src="Imagenes/snowboard.jpeg" class="escala card-img-top" alt="Foto de activiad en motos de nieve y UTV">
               <div class="card-body">
                 <h3 class="card-title">Actividades y Excursiones</h3>
                 <p class="card-text">Ofrecemos una amplia variedad de actividades para realizar,
@@ -82,7 +82,7 @@
           </div>
           <div class="col-12 col-xl-6">
             <div class="card">
-              <img src="Imagenes/fotorestaurante2.jpg" class="card-img-top" alt="Imagen del restaurante">
+              <img src="Imagenes/fotorestaurante2.jpg" class="escala card-img-top" alt="Imagen del restaurante">
               <div class="card-body">
                 <h3 class="card-title">Restaurante Fin del Mundo</h3>
                 <p class="card-text">Disfruta de una gran experiencia de sabores de la mano de
