Redes Sociales del footer actualizadas

--- a/excursiones.html
+++ b/excursiones.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/0eca6ae834.js" crossorigin="anonymous"></script>
 </head>
@@ -177,11 +178,12 @@
                     <li>Abierto todos los días con reserva previa.</li>
                 </ul>
                 <ul class="redes-sociales">
-                    <li> <a href="https://www.facebook.com/Llanosdelcastorushuaia/" class="fa fa-facebook"></a> </li>
-                    <li> <a href="https://twitter.com/llanosdelcastor" class="fa-brands fa-twitter"></a> </li>
-                    <li> <a href="https://www.youtube.com/channel/UCJfzM2Uf6QW9mrCnbQ9MwVA" class="fa fa-youtube"></a>
+                    <li> <a href="https://www.facebook.com/Llanosdelcastorushuaia/"><i class="bi bi-facebook"></i></a>
                     </li>
-                    <li> <a href="https://www.instagram.com/llanosdelcastorushuaia/" class="fa-brands fa-instagram"></a>
+                    <li> <a href="https://twitter.com/llanosdelcastor"><i class="bi bi-twitter"></i></a> </li>
+                    <li> <a href="https://www.youtube.com/channel/UCJfzM2Uf6QW9mrCnbQ9MwVA"><i
+                                class="bi bi-youtube"></i></a> </li>
+                    <li> <a href="https://www.instagram.com/llanosdelcastorushuaia/"><i class="bi bi-instagram"></i></a>
                     </li>
                 </ul>
             </div>
