--- a/contacto.html
+++ b/contacto.html
@@ -2,40 +2,41 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Contacto - Llanos del castor</title>
-  <link rel="icon" type="image/x-icon" href="Imagenes/Logo1.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/0eca6ae834.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>Contacto - Llanos del castor</title>
+    <link rel="icon" type="image/x-icon" href="Imagenes/Logo1.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/0eca6ae834.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div>
-      <header>
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="Imagenes/Logo1.png" alt="logo"> </a>
-            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link" href="index.html">Inicio</a>
-                <a class="nav-link" href="alojamiento.html">Alojamiento</a>
-                <a class="nav-link" href="excursiones.html">Excursiones</a>
-                <a class="nav-link" href="restaurante.html">Restaurante</a>
-                <a class="nav-link" href="contacto.html">Contacto</a>
-              </div>
-            </div>
-          </div>
-        </nav>
+        <header>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html"><img src="Imagenes/Logo1.png" alt="logo"> </a>
+                    <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="index.html">Inicio</a>
+                            <a class="nav-link" href="alojamiento.html">Alojamiento</a>
+                            <a class="nav-link" href="excursiones.html">Excursiones</a>
+                            <a class="nav-link" href="restaurante.html">Restaurante</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
             <div>
                 <h1>Contacte con nosotros</h1>
             </div>
@@ -100,11 +101,12 @@
                     <li>Abierto todos los días con reserva previa.</li>
                 </ul>
                 <ul class="redes-sociales">
-                    <li> <a href="https://www.facebook.com/Llanosdelcastorushuaia/" class="fa fa-facebook"></a> </li>
-                    <li> <a href="https://twitter.com/llanosdelcastor" class="fa-brands fa-twitter"></a> </li>
-                    <li> <a href="https://www.youtube.com/channel/UCJfzM2Uf6QW9mrCnbQ9MwVA" class="fa fa-youtube"></a>
+                    <li> <a href="https://www.facebook.com/Llanosdelcastorushuaia/"><i class="bi bi-facebook"></i></a>
                     </li>
-                    <li> <a href="https://www.instagram.com/llanosdelcastorushuaia/" class="fa-brands fa-instagram"></a>
+                    <li> <a href="https://twitter.com/llanosdelcastor"><i class="bi bi-twitter"></i></a> </li>
+                    <li> <a href="https://www.youtube.com/channel/UCJfzM2Uf6QW9mrCnbQ9MwVA"><i
+                                class="bi bi-youtube"></i></a> </li>
+                    <li> <a href="https://www.instagram.com/llanosdelcastorushuaia/"><i class="bi bi-instagram"></i></a>
                     </li>
                 </ul>
             </div>
@@ -114,8 +116,8 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
