--- a/excursiones.html
+++ b/excursiones.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description"
+        content="Excursiones y actividades en verano y en invierno para todas las edades y todas las edades. Vení a conocernos.">
+    <meta name="keywords"
+        content="EXCURSIONES EN USHUAIA, ACTIVIDADES EN USHUAIA, EXCURSIONES, ACTIVIDADES, INVIERNO, VERANO, SKY, SNOWBOARD, CAMINATA, TRECKING, 4X4, UTV, CUATRICICLO.">
     <title>Excursiones - LLanos del castor</title>
     <link rel="icon" type="image/x-icon" href="Imagenes/Logo1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/0eca6ae834.js" crossorigin="anonymous"></script>
 </head>
 
@@ -38,120 +43,127 @@
                 </div>
             </nav>
             <div>
-                <h1>Elija la excursión de sus sueños a un precio increíble</h1>
+                <h1 class="excursiones">Elija la excursión de sus sueños a un precio increíble</h1>
             </div>
         </header>
 
 
         <main>
-            <section>
+            <section class="paquetes container">
                 <p> Armamos paquetes de actividades y excursiones para todos los gustos y edades. Las mismas varían
                     dependiendo las estaciones del año. Todas las opciones incluyen almuerzo en el restaurante
                     del hotel. Algunas opciones las podes disfrutar también de noche, ¡no te lo pierdas!</p>
-                <p>NOTA IMPORTANTE: las actividades y excursiones tienen un cargo adicional a la estadía. Consultá
-                    por precios y disponibilidad <a href="Contacto.html">aquí</a> </p>
+                <p><span>NOTA IMPORTANTE:</span> las actividades y excursiones tienen un cargo adicional a la estadía.
+                    Consultá
+                    por precios y disponibilidad <a href="contacto.html" aria-label="Ir a la pagina de Contacto">aquí</a> </p>
             </section>
-            <section>
+            <section class="actividades container">
                 <h2>Actividades de invierno</h2>
-                <div>
-                    <div>
-                        <h3>Trineo con perros + trecking a Lago Esmeralda</h3>
-                        <ul>
-                            <li>Disponibilidad: diurna</li>
-                            <li>Duración: 10 hs a 16 hs</li>
-                            <li>Edades recomendadas: de 10 años a 50 años.</li>
-                            <li>Itinerario:
-                                <ol>
-                                    <li>10 hs: Inicia el trineo con perros.</li>
-                                    <li>12.30 hs: Llegada al hotel + almuerzo en el restaurante (incluido)</li>
-                                    <li>13.30 hs: Trecking hacia Lago Esmeralda. 5 kilómetros aprox.</li>
-                                    <li>16 hs: Vuelta al hotel.</li>
-                                </ol>
-                            </li>
-                        </ul>
+                <div class="cartas-excursiones">
+                    <div class="carta">
+                        <div class="face front">
+                            <img src="Imagenes/trineoconperros.jpg" alt="Actividad trineo con perros.">
+                            <h3>Trineo con perros + trecking </h3>
+                        </div>
+                        <div class="face back">
+                            <h3>Trineo con perros + trecking a Lago Esmeralda</h3>
+                            <ul>
+                                <li>Disponibilidad: diurna</li>
+                                <li>Duración: 10 hs a 16 hs</li>
+                                <li>Edades recomendadas: de 10 años a 50 años.</li>
+                                <li>Itinerario:
+                                    <ol>
+                                        <li>10 hs: Inicia el trineo con perros.</li>
+                                        <li>12.30 hs: Llegada al hotel + almuerzo en el restaurante (incluido)</li>
+                                        <li>13.30 hs: Trecking hacia Lago Esmeralda. 5 kilómetros aprox.</li>
+                                        <li>16 hs: Vuelta al hotel.</li>
+                                    </ol>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div>
-                        <img src="Imagenes/treckinglagoesmeralda.jpg" alt="Actividad trecking a Lago Esmeralda.">
-                        <img src="Imagenes/trineoconperros.jpg" alt="Actividad trineo con perros.">
+                    <div class="carta">
+                        <div class="face front">
+                            <img src="Imagenes/caminata-raquetas.jpeg"
+                                alt="Foto de persona caminando sobre la nieve con raquetas">
+                            <h3>Paseo moto de nieve + caminata</h3>
+                        </div>
+                        <div class="face back">
+                            <h3>Paseo en moto de nieve + caminata sobre raquetas.</h3>
+                            <ul>
+                                <li>Disponibilidad: diurna y nocturna</li>
+                                <li>Duración: 9 hs a 15 hs</li>
+                                <li>Edades recomendadas: para todas las edades.</li>
+                                <li>Itinerario: consultar por itinerario.</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Paseo en moto de nieve + caminata sobre raquetas.</h3>
-                        <ul>
-                            <li>Disponibilidad: diurna y nocturna</li>
-                            <li>Duración: 9 hs a 15 hs</li>
-                            <li>Edades recomendadas: para todas las edades.</li>
-                            <li>Itinerario: consultar por itinerario.</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <img src="Imagenes/motosdenieve.jpg" alt="Foto de actividad en moto de nieve">
-                        <img src="Imagenes/caminata-raquetas.jpeg"
-                            alt="Foto de persona caminando sobre la nieve con raquetas">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Día de sky o snowboard en el Cerro Castor</h3>
-                        <ul>
-                            <li>Disponibilidad: diurna</li>
-                            <li>Duración: 8 hs a 18 hs</li>
-                            <li>Edades recomendadas: 5 años a 65 años.</li>
-                            <li>Itinerario:
-                                <ol>
-                                    <li>8 hs: Emprendemos subida hacia el Cerro Castor.</li>
-                                    <li>12 hs: Almuerzo.</li>
-                                    <li>17 hs: Merienda.</li>
-                                    <li>18 hs: Vuelta al hote.</li>
-                                </ol>
-                            </li>
-                            <li>Opcional: clases con instructor (costo adicional)</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <img src="Imagenes/esqui-para-niños.jpg" alt="Foto de nene esquiando">
-                        <img src="Imagenes/fotoesqui2.jpg" alt="Foto de los esquíes que dispone el hotel">
+                    <div class="carta">
+                        <div class="face front">
+                            <img src="Imagenes/esqui-para-niños.jpg" alt="Foto de nene esquiando">
+                            <h3>Día de sky o snowboard</h3>
+                        </div>
+                        <div class="face back">
+                            <h3>Día de sky o snowboard en el Cerro Castor</h3>
+                            <ul>
+                                <li>Disponibilidad: diurna</li>
+                                <li>Duración: 8 hs a 18 hs</li>
+                                <li>Edades recomendadas: 5 años a 65 años.</li>
+                                <li>Itinerario:
+                                    <ol>
+                                        <li>8 hs: Emprendemos subida hacia el Cerro Castor.</li>
+                                        <li>12 hs: Almuerzo.</li>
+                                        <li>17 hs: Merienda.</li>
+                                        <li>18 hs: Vuelta al hote.</li>
+                                    </ol>
+                                </li>
+                                <li>Opcional: clases con instructor (costo adicional)</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="actividades container">
                 <h2>Actividades de verano</h2>
-                <div>
-                    <div>
-                        <h3>Paseo en cuatriciclo + caminata guiada por el Valle</h3>
-                        <ul>
-                            <li>Disponibilidad: diurna y nocturna</li>
-                            <li>Duración: de 10 hs a 14 hs (diurno) // de 18 hs a 22 hs</li>
-                            <li>Edades recomendadas: para todas las edades.</li>
-                            <li>Itinerario: consultar por itinerario.</li>
-                        </ul>
+                <div class="cartas-excursiones">
+                    <div class="carta">
+                        <div class="face front">
+                            <img src="Imagenes/paseo en cuatriciclo.jpg" alt="Foto de actividad paseo en cuatriciclo">
+                            <h3>Paseo en cuatriciclo + caminata</h3>
+                        </div>
+                        <div class="face back">
+                            <h3>Paseo en cuatriciclo + caminata por el Valle</h3>
+                            <ul>
+                                <li>Disponibilidad: diurna y nocturna</li>
+                                <li>Duración: de 10 hs a 14 hs (diurno) // de 18 hs a 22 hs</li>
+                                <li>Edades recomendadas: para todas las edades.</li>
+                                <li>Itinerario: consultar por itinerario.</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div>
-                        <img src="Imagenes/paseo en cuatriciclo.jpg" alt="Foto de actividad paseo en cuatriciclo">
-                        <img src="Imagenes/paseovalle.jpg" alt="Foto de actividad guiada paseo por el valle. ">
-                    </div>
-                </div>
-                <div>
-                    <div>
-                        <h3>Trecking por Lago Esmeralda + travesía 4x4</h3>
-                        <ul>
-                            <li>Disponibilidad: diurna</li>
-                            <li>Duración: de 10 hs a 16 hs</li>
-                            <li>Edades recomendadas: de 10 años a 50 años. </li>
-                            <li>Itinerario:
-                                <ol>
-                                    <li>10 hs: Comienzo del trecking hacia Lago Esmeralda. 5 kilómetros.</li>
-                                    <li>13 hs: Regreso al hotel + almuerzo</li>
-                                    <li>14 hs: Inicio de travesía 4x4 en UTV</li>
-                                    <li>16 hs: regreso al Hotel. </li>
-                                </ol>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <img src="Imagenes/travesiautv.jpg" alt="Foto de actividad de la travesía en UTV.">
-                        <img src="Imagenes/travesiautv2.jpg" alt="Foto de actividad de la travesía en UTV.">
+                    <div class="cartas-excursiones">
+                        <div class="carta">
+                            <div class="face front">
+                                <img src="Imagenes/travesiautv2.jpg" alt="Foto de actividad de la travesía en UTV.">
+                                <h3>Trecking + travesía 4x4</h3>
+                            </div>
+                            <div class="face back">
+                                <h3>Trecking por Lago Esmeralda + travesía 4x4</h3>
+                                <ul>
+                                    <li>Disponibilidad: diurna</li>
+                                    <li>Duración: de 10 hs a 16 hs</li>
+                                    <li>Edades recomendadas: de 10 años a 50 años. </li>
+                                    <li>Itinerario:
+                                        <ol>
+                                            <li>10 hs: Comienzo del trecking hacia Lago Esmeralda. 5 kilómetros.</li>
+                                            <li>13 hs: Regreso al hotel + almuerzo</li>
+                                            <li>14 hs: Inicio de travesía 4x4 en UTV</li>
+                                            <li>16 hs: regreso al Hotel. </li>
+                                        </ol>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
