--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <meta name="description"
+    content="Ubicado en el km 3033 sobre la RN3 rodeador de bosques y turberas. Aquí podrás realizar todo tipo de actividades de invierno y de verano.">
+  <meta name="keywords"
+    content="SKY, SNOWBOARD, HOTEL, ALOJAMIENTOS EN USHUAIA, CABAÑAS, GLAMPINGS, NATURALEZA, EXCURSIONES EN USUHAIA">
   <title>Inicio - Llanos del castor</title>
   <link rel="icon" type="image/x-icon" href="Imagenes/Logo1.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <script src="https://kit.fontawesome.com/0eca6ae834.js" crossorigin="anonymous"></script>
 </head>
 
@@ -20,8 +26,9 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="Imagenes/Logo1.png" alt="logo"> </a>
-          <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -64,20 +71,21 @@
                 <p class="card-text">Conocé todas las opciones disponibles y elegí la que mejor
                   se adapte a tus necesidades para disfrutar de unas vacaciones
                   inolvidables.</p>
-                <a href="alojamiento.html" class="btn">Ver más</a>
+                <a href="alojamiento.html" aria-label="Ir a la pagina Alojamiento" class="btn">Ver más</a>
               </div>
             </div>
           </div>
           <div class="col-12 col-xl-6">
             <div class="card">
-              <img src="Imagenes/snowboard.jpeg" class="escala card-img-top" alt="Foto de activiad en motos de nieve y UTV">
+              <img src="Imagenes/snowboard.jpeg" class="escala card-img-top"
+                alt="Foto de activiad en motos de nieve y UTV">
               <div class="card-body">
                 <h3 class="card-title">Actividades y Excursiones</h3>
                 <p class="card-text">Ofrecemos una amplia variedad de actividades para realizar,
                   las cuales varían dependiendo de la estación del año en la
                   que se hospede en el complejo. Cada una de la mismas tiene
                   un costo adicional.</p>
-                <a href="excursiones.html" class="btn">Ver más</a>
+                <a href="excursiones.html" aria-label="Ir a pagina Excursiones" class="btn">Ver más</a>
               </div>
             </div>
           </div>
@@ -89,7 +97,7 @@
                 <p class="card-text">Disfruta de una gran experiencia de sabores de la mano de
                   nuestros cheffs que realizarán comidas regionales típicas.
                   Se necesita reservar con anticipación</p>
-                <a href="restaurante.html" class="btn">Ver más</a>
+                <a href="restaurante.html" aria-label="Ir a la pagina Restaurante" class="btn">Ver más</a>
               </div>
             </div>
           </div>
@@ -98,15 +106,13 @@
       <section class="formreserva">
         <h2>Solicite su reserva</h2>
         <form action="https://formspree.io/f/myyvkynr" method="POST">
-          <div class="mb-3">
-            <input type="text" class="form-control inputs" id="nombre" placeholder="Santiago Sanchez">
-            <input type="email" class="form-control inputs" id="email" placeholder="name@example.com">
-            <label for="checkin" class="label">Check-in</label>
-            <input type="date" class="check" id="checkin" name="checkin" required placeholder="">
-            <label for="checkout" class="label2">Check-out</label>
-            <input type="date" class="check" id="checkout" name="checkout" required placeholder="">
-            <input type="submit" class="inputs boton form-control" value="Enviar">
-          </div>
+          <input type="text" class="form-control inputs" id="nombre" placeholder="Santiago Sanchez">
+          <input type="email" class="form-control inputs" id="email" placeholder="name@example.com">
+          <label for="checkin" class="label">Check-in</label>
+          <input type="date" class="check" id="checkin" name="checkin" required placeholder="">
+          <label for="checkout" class="label2">Check-out</label>
+          <input type="date" class="check" id="checkout" name="checkout" required placeholder="">
+          <input type="submit" class="inputs boton form-control" value="Enviar">
         </form>
       </section>
     </main>
@@ -121,7 +127,8 @@
         <ul class="redes-sociales">
           <li> <a href="https://www.facebook.com/Llanosdelcastorushuaia/"><i class="bi bi-facebook"></i></a> </li>
           <li> <a href="https://twitter.com/llanosdelcastor"><i class="bi bi-twitter"></i></a> </li>
-          <li> <a href="https://www.youtube.com/channel/UCJfzM2Uf6QW9mrCnbQ9MwVA"><i class="bi bi-youtube"></i></a> </li>
+          <li> <a href="https://www.youtube.com/channel/UCJfzM2Uf6QW9mrCnbQ9MwVA"><i class="bi bi-youtube"></i></a>
+          </li>
           <li> <a href="https://www.instagram.com/llanosdelcastorushuaia/"><i class="bi bi-instagram"></i></a> </li>
         </ul>
       </div>
@@ -129,8 +136,10 @@
         <p> Llanos del Castor Ushuaia. Todos los derechos reservados. 2022.</p>
       </div>
     </footer>
-  </div>  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
