--- a/contacto.html
+++ b/contacto.html
@@ -67,7 +67,7 @@
                     <div>
                         <label for="comentario">Comentario*</label>
                         <textarea name="comentario" id="comentario" required rows="10"
-                            cols="30">Escriba aquí su comentario</textarea>
+                            cols="30" placeholder="Escriba aquí su comentario"></textarea>
                     </div>
                     <div>
                         <input type="submit" class="boton" value="Enviar Consulta">
