--- a/excursiones.html
+++ b/excursiones.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Excursiones y actividades en verano y en invierno para todas las edades y todas las edades. Vení a conocernos.">
     <meta name="keywords"
@@ -167,17 +168,27 @@
                 </div>
             </section>
             <section class="formreserva">
-                <h2>Solicite su reserva</h2>
-                <form action="https://formspree.io/f/myyvkynr" method="POST">
-                    <input type="text" class="inputs" id="nombre" name="nombre" required placeholder="Nombre">
-                    <input type="text" class="inputs" id="apellido" name="apellido" required placeholder="Apellido">
-                    <input type="email" class="inputs" id="email" name="email" required placeholder="Email">
-                    <label for="checkin" class="label">Check-in</label>
-                    <input type="date" class="check" id="checkin" name="checkin" required placeholder="">
-                    <label for="checkout" class="label2">Check-out</label>
-                    <input type="date" class="check" id="checkout" name="checkout" required placeholder="">
-                    <input type="submit" class="inputs boton" value="Enviar">
+                <h2>Contáctenos</h2>
+                <form class="container" action="https://formspree.io/f/myyvkynr" method="POST">
+                  <input type="text" class="inputs" id="nombre" name="nombre" required placeholder="Nombre">
+                  <input type="text" class="inputs" id="apellido" name="apellido" required placeholder="Apellido">
+                  <input type="email" class="inputs" id="email" name="email" required placeholder="Email">
+                  <select name="consulta-reserva" required>
+                    <option value="reserva">Reserva</option>
+                    <option value="consulta">Consulta</option>
+                  </select>
+                  <div>
+                  <label for="checkin" class="label">Check-in</label>
+                  <input type="date" class="check" id="checkin" name="checkin" placeholder="">
+                  <label for="checkout" class="label2">Check-out</label>
+                  <input type="date" class="check" id="checkout" name="checkout" placeholder="">
+                  </div>
+                  <label class="label3" for="comentario">Comentario</label>
+                  <textarea name="comentario" id="comentario" rows="10" cols="25"
+                    placeholder="Escriba aquí su comentario"></textarea>
+                  <input type="submit" class="inputs boton" value="Enviar">
                 </form>
+              </section>
             </section>
         </main>
         <footer>
