--- a/alojamiento.html
+++ b/alojamiento.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Dispones de cabañas y glampings para que puedas disfrutar de una inmejorable estadia rodeado de naturaleza. ¿Cual elegís?">
     <meta name="keywords"
@@ -42,7 +43,7 @@
                 </div>
             </nav>
             <div class="alojamiento">
-                <h1>Comodidades de ciudad en el fin del mundo</h1>
+                <h1>Alojamientos</h1>
             </div>
         </header>
         <main>
@@ -123,17 +124,27 @@
                     </ul>
             </section>
             <section class="formreserva">
-                <h2>Solicite su reserva</h2>
-                <form action="https://formspree.io/f/myyvkynr" method="POST">
-                    <input type="text" class="form-control inputs" id="nombre" placeholder="Santiago Sanchez">
-                    <input type="email" class="form-control inputs" id="email" placeholder="name@example.com">
-                    <label for="checkin" class="label">Check-in</label>
-                    <input type="date" class="check" id="checkin" name="checkin" required placeholder="">
-                    <label for="checkout" class="label2">Check-out</label>
-                    <input type="date" class="check" id="checkout" name="checkout" required placeholder="">
-                    <input type="submit" class="inputs boton form-control" value="Enviar">
+                <h2>Contáctenos</h2>
+                <form class="container" action="https://formspree.io/f/myyvkynr" method="POST">
+                  <input type="text" class="inputs" id="nombre" name="nombre" required placeholder="Nombre">
+                  <input type="text" class="inputs" id="apellido" name="apellido" required placeholder="Apellido">
+                  <input type="email" class="inputs" id="email" name="email" required placeholder="Email">
+                  <select name="consulta-reserva" required>
+                    <option value="reserva">Reserva</option>
+                    <option value="consulta">Consulta</option>
+                  </select>
+                  <div>
+                  <label for="checkin" class="label">Check-in</label>
+                  <input type="date" class="check" id="checkin" name="checkin" placeholder="">
+                  <label for="checkout" class="label2">Check-out</label>
+                  <input type="date" class="check" id="checkout" name="checkout" placeholder="">
+                  </div>
+                  <label class="label3" for="comentario">Comentario</label>
+                  <textarea name="comentario" id="comentario" rows="10" cols="25"
+                    placeholder="Escriba aquí su comentario"></textarea>
+                  <input type="submit" class="inputs boton" value="Enviar">
                 </form>
-            </section>
+              </section>
         </main>
         <footer>
             <div class="footer ">
